kubernetes/apps/grocy/grocy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: grocy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      containers:
        - name: grocy
          image: lscr.io/linuxserver/grocy:4.7.1
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 90
            periodSeconds: 30
            failureThreshold: 5
          volumeMounts:
            - name: data
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grocy-data-pvc
