kubernetes/apps/grocy/grocy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy
  namespace: grocy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grocy.kostikidis.net
      secretName: grocy-kostikidis-net-tls
  rules:
    - host: grocy.kostikidis.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grocy
                port:
                  number: 80
